--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
+    "cheerio": "^1.0.0-rc.3",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.9.25",
+    "nodemon": "^2.0.4",
     "puppeteer": "^1.17.0",
     "sitemap-stream-parser": "^1.7.0"
   }
