--- a/package.json
+++ b/package.json
@@ -4,18 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev:server": "start npm run start --prefix server",
+    "dev:client": "start npm run start --prefix client ",
+    "dev": "npm run dev:server && npm run dev:client"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.19.2",
-    "body-parser": "^1.19.0",
-    "cheerio": "^1.0.0-rc.3",
-    "colors": "^1.4.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "puppeteer": "^2.1.0",
-    "request": "^2.88.0"
+    "concurrently": "^5.3.0"
   }
 }
